Closed
Bug 1698303
Opened 5 years ago
Closed 5 years ago
AnimationEventDispatcher.h:54:41: error: use of undeclared identifier 'profiler_can_accept_markers'
Categories
(Core :: CSS Transitions and Animations, defect)
Core
CSS Transitions and Animations
Tracking
()
RESOLVED
FIXED
88 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox86 | --- | unaffected |
| firefox87 | --- | unaffected |
| firefox88 | --- | fixed |
People
(Reporter: glandium, Assigned: glandium)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
When building for Linux powerpc64el, mipsel, or s390x, the build fails with:
[task 2021-03-13T22:37:49.978Z] 22:37:49 INFO - In file included from Unified_cpp_dom_animation0.cpp:2:
[task 2021-03-13T22:37:49.978Z] 22:37:49 INFO - In file included from /builds/worker/checkouts/gecko/dom/animation/Animation.cpp:18:
[task 2021-03-13T22:37:49.978Z] 22:37:49 ERROR - /builds/worker/workspace/obj-build/dist/include/mozilla/AnimationEventDispatcher.h:54:41: error: use of undeclared identifier 'profiler_can_accept_markers'
[task 2021-03-13T22:37:49.978Z] 22:37:49 INFO - if (aMessage == eAnimationCancel && profiler_can_accept_markers()) {
[task 2021-03-13T22:37:49.978Z] 22:37:49 INFO - ^
[task 2021-03-13T22:37:49.978Z] 22:37:49 ERROR - /builds/worker/workspace/obj-build/dist/include/mozilla/AnimationEventDispatcher.h:86:9: error: use of undeclared identifier 'profiler_can_accept_markers'
[task 2021-03-13T22:37:49.978Z] 22:37:49 INFO - profiler_can_accept_markers()) {
[task 2021-03-13T22:37:49.978Z] 22:37:49 INFO - ^
[task 2021-03-13T22:37:49.978Z] 22:37:49 INFO - 2 errors generated.
https://treeherder.mozilla.org/logviewer?job_id=333147846&repo=try&lineNumber=5611
| Assignee | ||
Updated•5 years ago
|
Flags: needinfo?(florian)
| Assignee | ||
Updated•5 years ago
|
Flags: needinfo?(florian)
| Assignee | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → mh+mozilla
Status: NEW → ASSIGNED
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/d8bfc2068c9f
Wrap code using profiler_can_accept_markers with #ifdef MOZ_GECKO_PROFILER. r=emilio
Comment 3•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox88:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
Comment 5•5 years ago
|
||
Set release status flags based on info from the regressing bug 1698125
status-firefox86:
--- → unaffected
status-firefox87:
--- → unaffected
status-firefox-esr78:
--- → unaffected
Comment 6•5 years ago
|
||
I put in bug 1698493 the patch I would have liked to fix this.
Updated•5 years ago
|
Keywords: regression
Updated•5 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•