Bug 1698303 - Wrap code using profiler_can_accept_markers with #ifdef MOZ_GECKO_PROFILER. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D108332