dom/animation/AnimationEventDispatcher.h
@@ -51,6 +51,7 @@ struct AnimationEventInfo {
     event.mPseudoElement =
         nsCSSPseudoElements::PseudoTypeAsString(aTarget.mPseudoType);
 
+#ifdef MOZ_GECKO_PROFILER
     if (aMessage == eAnimationCancel && profiler_can_accept_markers()) {
       nsCString markerText;
       aAnimationName->ToUTF8String(markerText);
@@ -61,6 +62,7 @@ struct AnimationEventInfo {
                                  aScheduledEventTimeStamp),
           markerText);
     }
+#endif
   }
 
   // For CSS transition events
@@ -82,6 +84,7 @@ struct AnimationEventInfo {
     event.mPseudoElement =
         nsCSSPseudoElements::PseudoTypeAsString(aTarget.mPseudoType);
 
+#ifdef MOZ_GECKO_PROFILER
     if ((aMessage == eTransitionEnd || aMessage == eTransitionCancel) &&
         profiler_can_accept_markers()) {
       nsCString markerText;
@@ -96,6 +99,7 @@ struct AnimationEventInfo {
                                  aScheduledEventTimeStamp),
           markerText);
     }
+#endif
   }
 
   // For web animation events
